Fix Preview Spacing Bug

--- a/src/TrueOrFalse.Frontend.Web/Style/includes/shared.less
+++ b/src/TrueOrFalse.Frontend.Web/Style/includes/shared.less
@@ -818,7 +818,6 @@
         width: 100%;
         height: inherit;
         margin-left: 0;
-        margin-bottom: 30px;
         left: 0;
         right: 0;
     }
