--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
@@ -474,6 +474,11 @@ html.flexbox:not(.Explorer) {
     }
 
     .topic {
+        .row {
+            margin-top: 20px;
+            margin-bottom: 25px;
+        }
+
         .stack-below(@extra-breakpoint-cards);
 
         .ImageContainer {
